# velora_dev_server

./: .gitattributes  .gitignore  VELORA_DEV_DB_SETUP_20260603-212113.md  VELORA_HANDOFF_20260601.md  VELORA_INFERENCE_TUNING_LOG_20260603-224242.md  VELORA_PROD_SETUP_LOG_20260528.md  VELORA_SPC_WAV_ANALYSIS_20260601.md  VELORA_WORK_LOG.md  VELORA_WORK_RECORD_20260601.md  VELORA_WORK_RECORD_20260604-112523.md  VELORA_WORK_RECORD_20260604-143442.md  VELORA_WORK_RECORD_20260604-204630.md  VELORA_WORK_RECORD_20260611-230911.md  normal_mci_ad_task-ALL_best.h5  normal_mci_ad_task-ALL_metadata.json
ops/: RECOVERY_RUNBOOK_KO.md  backup_prod.sh  dev_schema.sql  nginx-velora-before-dev-8080.conf  nginx-velora-before-https-dev.conf  prod_schema.sql  rebuild_prod.sh  run_dev_backend.sh  setup_dev_db.sh
velora-backend/: README.md  pyproject.toml
velora-backend/app/: database.py  main.py
velora-backend/app/models/: schemas.py
velora-backend/app/routers/: admin.py  analysis.py  auth.py  consent.py  results.py  upload.py
velora-backend/app/services/: audio_processor.py  cognitive_model.py  feature_extractor.py  language_processor.py  risk_model.py  speaker_processor.py  stt_processor.py
velora-backend/scripts/: build_combined_test_data.py  build_sample_call_data.py  build_test_manifest.py  run_inference_validation.py
velora-frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
velora-frontend/src/: App.css  App.tsx  index.css  main.tsx
velora-frontend/src/components/: ErrorBoundary.tsx
velora-train/: training_summary.json
(+19 files in other folders)
